fill in the texture_setimage function, fill in a few other functions, and change certain names to be a little more consistent

--- a/libobs/makefile
+++ b/libobs/makefile
@@ -34,6 +34,7 @@ SRCFILES=util/bmem.c \
 	 media-io/video-io.c \
 	 media-io/audio-io.c \
 	 media-io/media-io.c \
+	 media-io/format-conversion.c \
 	 obs-module.c \
 	 obs-output.c \
 	 obs-source.c \
