update build system to autotools (finally)

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,30 @@ Debug/
 x64/
 ipch/
 
+#autotools
+m4/libtool.m4
+m4/lt~obsolete.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+.deps
+.libs
+aclocal.m4
+autom4te.cache
+config.guess
+config.log
+config.status
+config.sub
+configure
+depcomp
+install-sh
+Makefile.in
+Makefile
+missing
+compile
+libtool
+ltmain.sh
+
 .depend
 tags
 *.swp
@@ -25,6 +49,8 @@ tags
 *.suo
 *.ncb
 *.user
+*.lo
+*.la
 *.o
 *.obj
 *.pdb
