--- a/makefile.am
+++ b/makefile.am
@@ -1,3 +1,3 @@
 ACLOCAL_AMFLAGS=-I m4
-SUBDIRS=libobs libobs-opengl test build
+SUBDIRS=libobs libobs-opengl test build obs
 EXTRA_DIST=autogen.sh COPYING README
