update one AM file, had the wrong file references in it

--- a/obs/makefile.am
+++ b/obs/makefile.am
@@ -10,6 +10,6 @@ endif
 
 obs_PROGRAMS = obs
 # obs_LDADD = $(top_srcdir)/libobs/libobs.la
-obs_SOURCES = basic-window.cpp \
+obs_SOURCES = window-obs-basic.cpp \
 	      obs.cpp \
 	      OBSWindows.cpp
