fix a few windows wx issues, make windows use default GUI fonts, and a few other minor tweaks

--- a/vs/2010/OBS/OBS.vcxproj
+++ b/vs/2010/OBS/OBS.vcxproj
@@ -170,11 +170,13 @@
     <ClCompile Include="..\..\..\obs\obs.cpp" />
     <ClCompile Include="..\..\..\obs\OBSWindows.cpp" />
     <ClCompile Include="..\..\..\obs\window-obs-basic.cpp" />
+    <ClCompile Include="..\..\..\obs\window-subclass.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\obs\obs.hpp" />
     <ClInclude Include="..\..\..\obs\OBSWindows.h" />
     <ClInclude Include="..\..\..\obs\window-obs-basic.hpp" />
+    <ClInclude Include="..\..\..\obs\window-subclass.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
