--- a/obs/makefile.am
+++ b/obs/makefile.am
@@ -11,5 +11,6 @@ endif
 obs_PROGRAMS = obs
 # obs_LDADD = $(top_srcdir)/libobs/libobs.la
 obs_SOURCES = window-obs-basic.cpp \
+	      window-subclass.cpp \
 	      obs.cpp \
 	      OBSWindows.cpp
